Add MHA support
test

y

--- a/tools/cross_runner/CMakeLists.txt
+++ b/tools/cross_runner/CMakeLists.txt
@@ -15,6 +15,7 @@ set(TARGET_SOURCES
     ${SOURCES_DIR}/softmax.cpp
     ${SOURCES_DIR}/mvn.h
     ${SOURCES_DIR}/mvn.cpp
+	${SOURCES_DIR}/mha.h
     ${SOURCES_DIR}/memory_bandwidth.h
 )
 
