--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/CLIUtils/CLI11.git
 [submodule "thirdparty/libraries.performance.math.onednn"]
 	path = thirdparty/libraries.performance.math.onednn
-	url = https://github.com/intel-innersource/libraries.performance.math.onednn.git
+	url = https://github.com/smarcink/libraries.performance.math.onednn.git
