added convolution dispatcher for d3d12 umd

--- a/tools/cross_runner/CMakeLists.txt
+++ b/tools/cross_runner/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TARGET_SOURCES
     ${SOURCES_DIR}/mvn.h
     ${SOURCES_DIR}/mvn.cpp
     ${SOURCES_DIR}/memory_bandwidth.h
+    ${SOURCES_DIR}/iumd_d3d12_impl.h
 )
 
 add_executable(${TARGET_NAME} ${TARGET_SOURCES})
