--- a/tools/cross_runner/CMakeLists.txt
+++ b/tools/cross_runner/CMakeLists.txt
@@ -23,7 +23,7 @@ set(TARGET_SOURCES
 )
 
 add_executable(${TARGET_NAME} ${TARGET_SOURCES})
-target_link_libraries(${TARGET_NAME} PRIVATE dml d3d12 dxgi dxguid d3d12x dmlx dnnl CLI11::CLI11 igdext libdml)
+target_link_libraries(${TARGET_NAME} PRIVATE dml d3d12 dxgi dxguid d3d12x dmlx dnnl CLI11::CLI11 igdext)
 target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
 target_compile_options(${TARGET_NAME} PRIVATE /W3)
 target_compile_definitions(${TARGET_NAME} PRIVATE DML_TARGET_VERSION_USE_LATEST)
