--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/libraries.performance.math.onednn"]
 	path = thirdparty/libraries.performance.math.onednn
 	url = https://github.com/smarcink/libraries.performance.math.onednn.git
+[submodule "thirdparty/drivers.gpu.compute.ai.dnnlpluginnext"]
+	path = thirdparty/drivers.gpu.compute.ai.dnnlpluginnext
+	url = https://github.com/intel-innersource/drivers.gpu.compute.ai.dnnlpluginnext
