--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/drivers.gpu.compute.ai.dnnlpluginnext"]
 	path = thirdparty/drivers.gpu.compute.ai.dnnlpluginnext
 	url = https://github.com/intel-innersource/drivers.gpu.compute.ai.dnnlpluginnext
+[submodule "thirdparty/googletest"]
+	path = thirdparty/googletest
+	url = https://github.com/google/googletest.git
