basic gemm tests and updated dnnlpluginnext submodule

--- a/tools/tests/CMakeLists.txt
+++ b/tools/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ set(MAIN_SOURCES
 # add the test cases
 set(TEST_CASES_DIR      "${CMAKE_CURRENT_SOURCE_DIR}/test_cases")
 set(TEST_CASES_LABEL    "test cases")
-set(TARGET_SOURCES
+set(TEST_CASES_SOURCES
     ${TEST_CASES_DIR}/test_gemm.cpp
 )
 
