--- a/tools/cross_runner/CMakeLists.txt
+++ b/tools/cross_runner/CMakeLists.txt
@@ -7,4 +7,5 @@ set(TARGET_SOURCES
 )
 
 add_executable(${TARGET_NAME} ${TARGET_SOURCES})
+target_compile_options(${TARGET_NAME} PUBLIC /W3 /MP)
 target_link_libraries(${TARGET_NAME} PRIVATE common_lib)
