starting some cleanup

--- a/tools/common_lib/CMakeLists.txt
+++ b/tools/common_lib/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TARGET_SOURCES
     ${SOURCES_DIR}/dml_base_node.h
     ${SOURCES_DIR}/layers_utils.h
     ${SOURCES_DIR}/dnnl_utils.h
+    ${SOURCES_DIR}/tensor_shape.h
     ${SOURCES_DIR}/gemm.h
     ${SOURCES_DIR}/gemm.cpp
     ${SOURCES_DIR}/conv.h
