more init code (i.e. DX12 gpu test context), removed partitions from API

--- a/tools/inference_engine/CMakeLists.txt
+++ b/tools/inference_engine/CMakeLists.txt
@@ -15,12 +15,14 @@ set(TARGET_SOURCES
     ${SOURCES_DIR}/inference_engine_operators.cpp
     ${SOURCES_DIR}/inference_engine_model.cpp
     
+    ${SOURCES_DIR}/impl/context.h
+    ${SOURCES_DIR}/impl/gpu_context.cpp
+    ${SOURCES_DIR}/impl/gpu_context.h
     ${SOURCES_DIR}/impl/model.cpp
     ${SOURCES_DIR}/impl/model.h
 )
 
 add_library(${TARGET_NAME} SHARED ${TARGET_SOURCES})
-target_link_libraries(${TARGET_NAME} PRIVATE d3d12 dxgi dxguid d3d12x)
 target_include_directories(${TARGET_NAME} PUBLIC ${HEADERS_DIR})
 target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
 target_compile_options(${TARGET_NAME} PRIVATE /W3)
