API updates and refactors

--- a/tools/inference_engine/CMakeLists.txt
+++ b/tools/inference_engine/CMakeLists.txt
@@ -22,6 +22,12 @@ set(TARGET_SOURCES
     ${SOURCES_DIR}/impl/model.h
     ${SOURCES_DIR}/impl/error.cpp
 	${SOURCES_DIR}/impl/error.h
+	${SOURCES_DIR}/impl/tensor.h
+	${SOURCES_DIR}/impl/node.h
+    
+	${SOURCES_DIR}/impl/nodes/activation.h
+	${SOURCES_DIR}/impl/nodes/matmul.h
+	${SOURCES_DIR}/impl/nodes/port.h
 )
 
 add_library(${TARGET_NAME} SHARED ${TARGET_SOURCES})
@@ -29,3 +35,4 @@ target_include_directories(${TARGET_NAME} PUBLIC ${HEADERS_DIR})
 target_compile_features(${TARGET_NAME} PRIVATE cxx_std_20)
 target_compile_options(${TARGET_NAME} PRIVATE /W3)
 
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_SOURCES})
