added conv, elemewise add, simplify the visitor and way to delete nodes, basic test for fusion- elementwise/conv

--- a/tools/inference_engine/CMakeLists.txt
+++ b/tools/inference_engine/CMakeLists.txt
@@ -29,6 +29,10 @@ set(TARGET_SOURCES
 	${SOURCES_DIR}/impl/nodes/matmul.cpp
 	${SOURCES_DIR}/impl/nodes/port.h
 	${SOURCES_DIR}/impl/nodes/port.cpp
+	${SOURCES_DIR}/impl/nodes/elementwise_add.h
+	${SOURCES_DIR}/impl/nodes/elementwise_add.cpp
+	${SOURCES_DIR}/impl/nodes/convolution.h
+	${SOURCES_DIR}/impl/nodes/convolution.cpp
 )
 
 add_library(${TARGET_NAME} SHARED ${TARGET_SOURCES})
