--- a/tools/inference_engine/CMakeLists.txt
+++ b/tools/inference_engine/CMakeLists.txt
@@ -11,6 +11,11 @@ set(TARGET_SOURCES
     ${HEADERS_DIR}/inference_engine_tensor.h
     ${HEADERS_DIR}/inference_engine_model.h
     
+    ${HEADERS_DIR}/inference_engine.hpp
+    ${HEADERS_DIR}/inference_engine_operators.hpp
+    ${HEADERS_DIR}/inference_engine_tensor.hpp
+    ${HEADERS_DIR}/inference_engine_model.hpp
+    
     ${SOURCES_DIR}/inference_engine.cpp
     ${SOURCES_DIR}/inference_engine_operators.cpp
     ${SOURCES_DIR}/inference_engine_model.cpp
@@ -20,7 +25,6 @@ set(TARGET_SOURCES
     ${SOURCES_DIR}/impl/gpu_visitor.h
     ${SOURCES_DIR}/impl/model.cpp
     ${SOURCES_DIR}/impl/model.h
-	${SOURCES_DIR}/impl/tensor.h
 	${SOURCES_DIR}/impl/node.h
 	${SOURCES_DIR}/impl/node.cpp
     
