implementation of basic visitation (#54)
* WIP implementation of basic visitation
* improved deletion mechanism, allow to fuse with multiple activations in a row, add tests
* added conv, elemewise add, simplify the visitor and way to delete nodes, basic test for fusion- elementwise/conv
* make tests still running after merges, add some basic activation fusion to kernel code
* optional name for the node
* move more code to the base class, fuse_with is now more generic
* simplify the visitor
* implement fusions for ConvPlusAddFusion, allow ElementwiseAdd to be fused with Convolution
* rework, fix fusion logic for convolution, add more logging when doing fusions

--- a/tools/inference_engine/CMakeLists.txt
+++ b/tools/inference_engine/CMakeLists.txt
@@ -17,16 +17,23 @@ set(TARGET_SOURCES
     
     ${SOURCES_DIR}/impl/gpu_context.cpp
     ${SOURCES_DIR}/impl/gpu_context.h
+    ${SOURCES_DIR}/impl/gpu_visitor.h
     ${SOURCES_DIR}/impl/model.cpp
     ${SOURCES_DIR}/impl/model.h
 	${SOURCES_DIR}/impl/tensor.h
 	${SOURCES_DIR}/impl/node.h
+	${SOURCES_DIR}/impl/node.cpp
     
 	${SOURCES_DIR}/impl/nodes/activation.h
 	${SOURCES_DIR}/impl/nodes/activation.cpp
 	${SOURCES_DIR}/impl/nodes/matmul.h
 	${SOURCES_DIR}/impl/nodes/matmul.cpp
 	${SOURCES_DIR}/impl/nodes/port.h
+	${SOURCES_DIR}/impl/nodes/port.cpp
+	${SOURCES_DIR}/impl/nodes/elementwise_add.h
+	${SOURCES_DIR}/impl/nodes/elementwise_add.cpp
+	${SOURCES_DIR}/impl/nodes/convolution.h
+	${SOURCES_DIR}/impl/nodes/convolution.cpp
 )
 
 add_library(${TARGET_NAME} SHARED ${TARGET_SOURCES})
