a) rename to "ai_driver" b) fixes to tensorMapping inconsistency (bug due to not removed "tensor.h" file)

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(common_lib)
 add_subdirectory(cross_runner)
 add_subdirectory(tests)
-add_subdirectory(inference_engine)
-add_subdirectory(inference_engine_tests)
+add_subdirectory(ai_driver)
+add_subdirectory(ai_driver_tests)
